--- a/package.json
+++ b/package.json
@@ -13,6 +13,8 @@
     "@auth/prisma-adapter": "^2.7.4",
     "@radix-ui/react-dialog": "^1.1.6",
     "@radix-ui/react-dropdown-menu": "^2.1.6",
+    "@radix-ui/react-label": "^2.1.2",
+    "@radix-ui/react-radio-group": "^1.2.3",
     "@radix-ui/react-slot": "^1.1.2",
     "@radix-ui/react-toast": "^1.2.6",
     "bcrypt": "^5.1.1",
