--- a/package.json
+++ b/package.json
@@ -25,8 +25,10 @@
     "next": "15.1.7",
     "next-auth": "^5.0.0-beta.25",
     "react": "^19.0.0",
+    "react-content-loader": "^7.0.2",
     "react-dom": "^19.0.0",
     "react-ellipsis-text": "^1.2.1",
+    "react-loader-spinner": "^6.1.6",
     "tailwind-merge": "^3.0.1",
     "tailwindcss-animate": "^1.0.7",
     "uuid": "^11.0.5",
